crates/shipper-lock/src/snapshots/shipper_lock__snapshot_tests__error_corrupt_lock_file_prefix.snap
---
source: crates/shipper-lock/src/lib.rs
expression: "\"failed to parse lock JSON\""
---
failed to parse lock JSON
