crates/shipper-lock/src/snapshots/shipper_lock__snapshot_tests__error_fresh_lock_with_timeout_prefix.snap
---
source: crates/shipper-lock/src/lib.rs
expression: "\"lock already held by current process (fresh lock within timeout)\""
---
lock already held by current process (fresh lock within timeout)
