crates/shipper-lock/src/snapshots/shipper_lock__snapshot_tests__error_lock_already_held.snap
---
source: crates/shipper-lock/src/lib.rs
expression: err.to_string()
---
lock already held by pid 42 on build-host since 2025-01-15 12:00:00 UTC (plan_id: None)
