crates/shipper-lock/src/snapshots/shipper_lock__snapshot_tests__error_read_nonexistent_lock_prefix.snap
---
source: crates/shipper-lock/src/lib.rs
expression: "\"failed to read lock file\""
---
failed to read lock file
