crates/shipper-lock/src/snapshots/shipper_lock__snapshot_tests__lock_info_yaml.snap
---
source: crates/shipper-lock/src/lib.rs
expression: info
---
pid: 42
hostname: build-host
acquired_at: "2025-01-15T12:00:00Z"
plan_id: plan-abc-123
