crates/shipper-lock/src/snapshots/shipper_lock__snapshot_tests__lock_path_without_root.snap
---
source: crates/shipper-lock/src/lib.rs
expression: "p.to_string_lossy().replace('\\\\', \"/\")"
---
.shipper/lock
